Template: Fix list name overlaps results preview
Fixes #596

--- a/less/components/constraints.less
+++ b/less/components/constraints.less
@@ -5,6 +5,17 @@
         text-transform: none;
         white-space: normal;
         margin-top: 0;
+        max-width: 100%;
+    }
+
+    .list-name {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+    .caret {
+        margin-left: @spacer/2;
     }
 }
 
